<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".caseLogin.LoginMainActivity">

    <RadioGroup
            android:id="@+id/rg_login"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_layout_height">
        <RadioButton
                android:id="@+id/rb_password"
                    android:text="@string/login_by_password"
                    android:textSize="@dimen/common_font_size"
                android:textColor="@color/black"
                android:checked="true"
                     android:layout_width="0dp"
                    android:layout_weight="1"
                     android:layout_height="wrap_content"/>
        <RadioButton
                android:id="@+id/rb_verifycode"
                    android:text="@string/login_by_verifycode"
                    android:textSize="@dimen/common_font_size"
                android:textColor="@color/black"
                     android:layout_width="0dp"
                    android:layout_weight="1"
                     android:layout_height="wrap_content"/>
    </RadioGroup>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_layout_height">
        <TextView
                android:id="@+id/tv_phone"
                  android:text="@string/phone_number"
                  android:textColor="@color/black"
                  android:textSize="@dimen/common_font_size"
                  android:textStyle="bold"
                  android:gravity="center"
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"/>
        <EditText
                android:id="@+id/et_phone"
                android:inputType="phone"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_selector"
                android:hint="@string/input_phone_number"
                android:textColor="@color/black"
                android:textColorHint="@color/grep"
                android:textSize="@dimen/common_font_size"
                android:maxLength="11"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_layout_height">
        <TextView
                android:id="@+id/tv_password"
                  android:text="@string/login_password"
                  android:textColor="@color/black"
                  android:textSize="@dimen/common_font_size"
                  android:textStyle="bold"
                  android:gravity="center"
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"/>
        <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

            <EditText
                    android:id="@+id/et_password"
                    android:inputType="numberPassword"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_selector"
                    android:hint="@string/input_password"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grep"
                    android:textSize="@dimen/common_font_size"
            />
            <Button
                    android:id="@+id/btn_forget"
                    android:layout_alignParentEnd="true"
                    android:text="@string/forget_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/common_font_size"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
        </RelativeLayout>
    </LinearLayout>
    <CheckBox
            android:id="@+id/ck_remember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember_password"
            android:textSize="@dimen/common_font_size"
            android:textColor="@color/black"
            android:button="@drawable/checkbox_selector"
    />
    <Button
            android:id="@+id/btn_login"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/button_font_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</LinearLayout>